--- a/project/sources/sass/scss/app.scss
+++ b/project/sources/sass/scss/app.scss
@@ -70,6 +70,8 @@
     @import "components/contents";
 }
 
+@import "components/demo";
+
 /*
  * Sometime, you need fallback hacks for some specific browsers, it should allways be
  * at the end to be able to override every others components
