--- a/project/sources/sass/scss/addons/_sections.scss
+++ b/project/sources/sass/scss/addons/_sections.scss
@@ -1,12 +1,14 @@
 /*
- * 
+ *
  * Sections and colors
- * 
+ *
  */
 .section {
     padding: rem-calc(15px) 0;
-    @include emencia-container-colors($black, $white);
-        
+    @include emencia-container-colors($black, $white,
+        $link-color: $primary-color
+    );
+
     @media #{$medium-up} {
         padding: rem-calc(30px) 0;
     }
@@ -29,7 +31,7 @@
             padding: rem-calc(65px) 0;
         }
     }
-    
+
     // Thin padding
     &.thin,
     & > .inner.thin{
@@ -38,7 +40,7 @@
             padding: rem-calc(15px) 0;
         }
     }
-    
+
     // Tiny padding
     &.tiny,
     & > .inner.tiny{
@@ -50,7 +52,7 @@
             padding: rem-calc(30px) 0;
         }
     }
-    
+
     // Taller padding
     &.tall,
     & > .inner.tall{
@@ -62,25 +64,32 @@
             padding: rem-calc(80px) 0;
         }
         @media #{$xlarge-up} {
-            padding: rem-calc(90px) 0;
+            padding: rem-calc(100px) 0;
         }
     }
-    
+
     // Unpadded section or inner element
     &.unpadded,
     & > .inner.unpadded{
         padding:0;
     }
-    
+
+    // Add a divider between divided sections
+    &.divider{
+        &+.section.divider{
+            border-top: 10px dashed $Oil;
+        }
+    }
+
     // Color variants
     &.black{
         @include emencia-container-colors($white, $black,
                                           $link-color: $white,
-                                          $h1-color: $white, 
-                                          $h2-color: $white, 
-                                          $h3-color: $white, 
-                                          $h4-color: $white, 
+                                          $h1-color: $white,
+                                          $h2-color: $white,
+                                          $h3-color: $white,
+                                          $h4-color: $white,
                                           $h5-color: $white);
     }
-    
+
 }
