--- a/project/sources/templates/_includes/_skeleton.html
+++ b/project/sources/templates/_includes/_skeleton.html
@@ -3,52 +3,49 @@
 <!--[if gt IE 8]><!--> <html class="{% block html_attr %}{% endblock %}no-js" lang="fr"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>{% block head_title %}{{ SITE.name }}{% endblock %}</title>
+    <title>{% block head_title %}{{ page_title|capitalize }} - {{ SITE.name }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}favicon.ico">
-    {#<link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">#}
-    {% block header_content %}
-        {% block head_metas %}
+    {#<link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}favicon.ico">#}
+    <link href="//fonts.googleapis.com/css?family=Open+Sans%7CSquada+One" rel="stylesheet">
+    {% block header_content -%}
+        {% block head_metas -%}
             <meta name="robots" content="index,follow,all">
-            <meta name="description" content="{% block meta_description %}{% endblock %}">
-            <meta name="Keywords" content="{% block meta_keywords %}{% endblock %}">
-        {% endblock %}
+        {%- endblock %}
 
-        {% block base_css %}{% assets "main_css" %}
+        {% block base_css -%}{%- assets "main_css" -%}
             <link rel="stylesheet" href="{{ page_relative_position }}{{ ASSET_URL }}">
-        {% endassets %}{% endblock %}
+        {%- endassets -%}{%- endblock %}
         {% block more_css %}{% endblock %}
-        {% block base_js %}{% assets "app_modernizr_js" %}
+        {% block base_js -%}{%- assets "app_modernizr_js" -%}
             <script src="{{ page_relative_position }}{{ ASSET_URL }}"></script>
-        {% endassets %}{% endblock %}
+        {%- endassets -%}{%- endblock %}
         {% block head_more_links %}{% endblock %}
-    {% endblock %}
+    {%- endblock %}
 </head>
 
 <body{% block body_attr %}{% endblock %}>
-    <div id="header-container"{% block header_topbar_attr %} class="contain-to-grid"{% endblock %}>
-        <nav class="top-bar " data-topbar>
+    <div id="header-container">
+        {% block header_topbar %}<nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name">
-                    <p><a href="/" title="{{ SITE.name }}" class="logo">{{ SITE.name }}</a></p>
+                    <p><a href="/">{{ SITE.name }}</a></p>
                 </li>
-                {% block header_topbar_toggle %}<li class="toggle-topbar menu-icon">
-                    <a href="#"><span>Menu</span></a>
-                </li>{% endblock %}
+                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
             </ul>
-            {% block menu_general %}<div class="top-bar-section">
-                {# Left Nav Section #}
+
+            <div class="top-bar-section">
                 <ul class="left">
+                    {% include '_includes/_menu.html' %}
                 </ul>
-            </div>{% endblock %}
-        </nav>
+            </div>
+        </nav>{% endblock %}
     </div>
 
     {% block content_container %}<div id="body_content"{% block content_container_attrs %}{% endblock %}>
         {% block base_content %}{% endblock %}
     </div>{% endblock %}
 
-    {% block footer_container %}
+    {#{% block footer_container %}
     <footer class="row">
         <div class="large-12 columns">
             <div class="inner">
@@ -60,10 +57,10 @@
             </div>
         </div>
     </footer>
-    {% endblock %}
+    {% endblock %}#}
 
-    {% block more_js %}{% assets "main_js" %}
+    {% block more_js -%}{%- assets "main_js" -%}
         <script src="{{ page_relative_position }}{{ ASSET_URL }}"></script>
-    {% endassets %}{% endblock %}
+    {%- endassets -%}{%- endblock %}
 </body>
 </html>
