--- a/project/sources/templates/index.html
+++ b/project/sources/templates/index.html
@@ -1,13 +1,14 @@
-{% extends "skeleton.html" %}
+{% extends "_includes/_skeleton.html" %}
+
+{% block head_title %}{{ SITE.name }}{% endblock %}
 
 {% block base_content %}
-<div class="base-container">
-    <div class="center-container">
-        <div class="cell">
-            <div class="center-block">
-                <h1>{{ SITE.name }}</h1>
-                <p>{% trans %}Hello World!{% endtrans %}</p>
-            </div>
+<div class="section">
+    <div class="row large">
+        <div class="small-12 columns text-center">
+            <h1>{{ page_title|capitalize }}</h1>
+            <p>Hello World!</p>
         </div>
     </div>
-</div>{% endblock %}
+</div>
+{% endblock %}
