Minor adjustments on kitchen sink

--- a/project/sources/templates/_includes/_default_kitchensink.html
+++ b/project/sources/templates/_includes/_default_kitchensink.html
@@ -10,33 +10,15 @@
     <div class="row">
         <div class="small-12 columns">
             <ul class="stack-for-small round button-group">
-                <li><a href="#blockquotes" class="button secondary tiny">Blockquotes</a></li>
                 <li><a href="#headings" class="button secondary tiny">Headings</a></li>
                 <li><a href="#grid" class="button secondary tiny">Grid</a></li>
+                <li><a href="#blockquotes" class="button secondary tiny">Blockquotes</a></li>
                 <li><a href="#figures" class="button secondary tiny">Figures</a></li>
             </ul>
         </div>
     </div>
 </div>
 
-<div class="section divider" id="blockquotes">
-    <div class="row">
-        <div class="small-12 columns">
-            <h2 class="demo-title text-center">Blockquotes</h2>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="small-12 columns">
-            <p class="quote">"If there ever was a team to trust with your PPC management, these are the guys. My advice? Grab your spot before they change their minds."</p>
-            <p class="center-text">- Petar Stojakovic, Subotica</p>
-        </div>
-        <div class="small-12 columns">
-            <p class="quote">I bought Rubiko theme that looks and works fantastically all recommendations!
-            <p class="center-text"><i><span class="green-light_typo"><strong>@blazrobar</strong></span> #webdesign</i></p>
-        </div>
-    </div>
-</div>
 
 <div class="section divider" id="headings">
     <div class="row">
@@ -71,6 +53,7 @@
         </div>
     </div>
 </div>
+
 
 <div class="section divider" id="grid">
     <div class="row">
@@ -142,8 +125,72 @@
     </div>
     <div class="row divider">
         <div class="small-12 columns">
-            <h3 class="demo-title">FULL WIDTH</h3>
+            <h3 class="demo-title">Full width</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
+
+    <div class="row larger divider">
+        <div class="small-12 columns">
+            <h3 class="demo-title">Inside a '.row.large'</h3>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
+
+    <div class="row fluid divider">
+        <div class="small-12 columns">
+            <h3 class="demo-title">Inside a '.row.fluid'</h3>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="large-3 medium-3 small-12 columns">
+            <h4 class="demo-title">1/4</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
+</div>
+
+
+<div class="section divider" id="blockquotes">
+    <div class="row">
+        <div class="small-12 columns">
+            <h2 class="demo-title text-center">Blockquotes</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="small-12 columns">
+            <p class="quote">"If there ever was a team to trust with your PPC management, these are the guys. My advice? Grab your spot before they change their minds."</p>
+            <p class="center-text">- Petar Stojakovic, Subotica</p>
+        </div>
+        <div class="small-12 columns">
+            <p class="quote">I bought Rubiko theme that looks and works fantastically all recommendations!
+            <p class="center-text"><i><span class="green-light_typo"><strong>@blazrobar</strong></span> #webdesign</i></p>
         </div>
     </div>
 </div>
@@ -174,7 +221,7 @@
     <div class="row">
         <div class="small-12 columns">
             <div class="large-6 medium-6 small-12 columns">
-                <img src="http://fpoimg.com/300x250" alt="">
+                <img src="http://fpoimg.com/455x250" alt="">
             </div>
             <div class="large-6 medium-6 small-12 columns">
                 <h3 class="demo-title">Rubiko will take<br>you to the next level</h3>
